compiler/testData/diagnostics/tests/nullableTypes/nullableArgumentForIn.kt
// RUN_PIPELINE_TILL: FRONTEND
fun test(x: Int?) {
     <!TYPE_MISMATCH!>x<!> in 1..2
}